--- a/WebApp/opted-adv-search/package.json
+++ b/WebApp/opted-adv-search/package.json
@@ -10,8 +10,8 @@
   },
   "private": true,
   "dependencies": {
-    "@ag-grid-community/client-side-row-model": "~28.0.0",
     "@ag-grid-community/angular": "^28.0.0",
+    "@ag-grid-community/client-side-row-model": "~28.0.0",
     "@ag-grid-community/core": "^28.0.2",
     "@angular/animations": "^14.0.0",
     "@angular/common": "^14.0.0",
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "ag-grid-community": "^28.0.2",
+    "bootstrap": "^5.1.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
