--- a/WebApp/opted-adv-search/angular.json
+++ b/WebApp/opted-adv-search/angular.json
@@ -8,6 +8,9 @@
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss"
+        },
+        "@schematics/angular:application": {
+          "strict": true
         }
       },
       "root": "",
@@ -105,5 +108,6 @@
         }
       }
     }
-  }
+  },
+  "defaultProject": "opted-adv-search"
 }
